Index Page Refresh
Changed stuff on index page and crap

--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Import fonts from Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Raleway&display=swap" rel="stylesheet">
     <!-- Import CSS framework from MaterializeCSS -->
@@ -22,8 +24,83 @@
 
     <div class="row">
         <!--Sidenav-->
-        <div class="col s12 m12 l3">
-
+        <div class="col s12 m12 l3 z-depth-3" id="sidenav">
+            <div class="row">
+                <form class="col s12" method="post" action="#">
+                    <div class="row">
+                        <div class="col s12">
+                            <h5>Genre</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="chips" id="genreTags">
+                                <a href="#!" class="chip">
+                                    Jazz
+                                </a>
+                                <a href="#!" class="chip">
+                                    Electronic
+                                </a>
+                                <a href="#!" class="chip active">
+                                    Rock
+                                </a>
+                                <a href="#!" class="chip">
+                                    Jazz
+                                </a>
+                                <a href="#!" class="chip">
+                                    Electronic
+                                </a>
+                                <a href="#!" class="chip">
+                                    Rock
+                                </a>
+                                <a href="#!" class="chip">
+                                    Jazz
+                                </a>
+                                <a href="#!" class="chip">
+                                    Electronic
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <h5>Mood</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="chips" id="genreTags">
+                                <a href="#!" class="chip">
+                                    Calm
+                                </a>
+                                <a href="#!" class="chip">
+                                    Energetic
+                                </a>
+                                <a href="#!" class="chip">
+                                    Happy
+                                </a>
+                                <a href="#!" class="chip active">
+                                    Calm
+                                </a>
+                                <a href="#!" class="chip">
+                                    Energetic
+                                </a>
+                                <a href="#!" class="chip">
+                                    Happy
+                                </a>
+                                <a href="#!" class="chip">
+                                    Calm
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <button class="btn-large">search</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
         <!--Main content-->
         <div class="col s12 m12 l9">
