--- a/source/index.html
+++ b/source/index.html
@@ -96,15 +96,30 @@
                     </div>
                     <div class="row">
                         <div class="col s12">
-                            <button class="btn-large">search</button>
+                            <input class="btn-large" value="search">
                         </div>
                     </div>
                 </form>
             </div>
         </div>
+
         <!--Main content-->
         <div class="col s12 m12 l9">
-
+            <div clas="row">
+                <div class="col s6 m5 l4 xl3">
+                    <div class="card medium">
+                        <div class="card-image">
+                            <img src="https://images.genius.com/a35459028cf25e559ecb94ea6759218d.1000x1000x1.jpg" alt="album_art">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title">
+                                song_title
+                            </span>
+                            <p>song_artist; song_featured_artist</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
