--- a/source/index.html
+++ b/source/index.html
@@ -1,3 +1,14 @@
+<?php
+session_start;
+$action = $_POST['action'];
+switch($action)
+{
+    case "search":
+        break;
+}
+
+require_once 'dbConnect.php';
+?>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,6 +33,7 @@
 
 <body>
 
+    <--! Sorted by date added, display all information that pertains to the query --></--!>
     <div class="row">
         <!--Sidenav-->
         <div class="col s12 m12 l3 z-depth-3" id="sidenav">
@@ -96,30 +108,15 @@
                     </div>
                     <div class="row">
                         <div class="col s12">
-                            <input class="btn-large" value="search">
+                            <button class="btn-large">search</button>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
-
         <!--Main content-->
         <div class="col s12 m12 l9">
-            <div clas="row">
-                <div class="col s6 m5 l4 xl3">
-                    <div class="card medium">
-                        <div class="card-image">
-                            <img src="https://images.genius.com/a35459028cf25e559ecb94ea6759218d.1000x1000x1.jpg" alt="album_art">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">
-                                song_title
-                            </span>
-                            <p>song_artist; song_featured_artist</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
 
