Fixed dumb mistake

--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,8 @@ require_once 'dbConnect.php';
 
 <body>
 
-    <--! Sorted by date added, display all information that pertains to the query --></--!>
+    <!-- Sorted by date added, display all information that pertains to the query -->
+    </--!>
     <div class="row">
         <!--Sidenav-->
         <div class="col s12 m12 l3 z-depth-3" id="sidenav">
