Tweaked site for mobile devices
Site now looks and operates much better on mobile devices.

--- a/source/index.html
+++ b/source/index.html
@@ -111,6 +111,146 @@ require_once 'dbConnect.php';
               <a class="tag">Jazz</a>
               <a class="tag">Energetic</a>
               <a class="tag">Chill</a>
+            </span>
+          </div>
+        </div>
+
+        <div class="song">
+          <div class="flex-container">
+            <img src="https://images.complex.com/complex/image/upload/t_article_image/leadflora_yisbdu.jpg" class="album-art" alt="Album Art">
+            <span class="song-title">Drift</span>
+            <span class="song-artist">Alinba Baraz, Galimatias</span>
+            <span class="song-tags">
+              <a class="tag">Electronic</a>
+              <a class="tag">Jazz</a>
+              <a class="tag">Energetic</a>
+              <a class="tag">Chill</a>
+              <a class="tag">Calm</a>
+            </span>
+          </div>
+        </div>
+
+        <div class="song">
+          <div class="flex-container">
+            <img src="https://images.complex.com/complex/image/upload/t_article_image/leadflora_yisbdu.jpg" class="album-art" alt="Album Art">
+            <span class="song-title">Drift</span>
+            <span class="song-artist">Alinba Baraz, Galimatias</span>
+            <span class="song-tags">
+              <a class="tag">Electronic</a>
+              <a class="tag">Jazz</a>
+              <a class="tag">Energetic</a>
+              <a class="tag">Chill</a>
+              <a class="tag">Calm</a>
+            </span>
+          </div>
+        </div>
+
+        <div class="song">
+          <div class="flex-container">
+            <img src="https://images.complex.com/complex/image/upload/t_article_image/leadflora_yisbdu.jpg" class="album-art" alt="Album Art">
+            <span class="song-title">Drift</span>
+            <span class="song-artist">Alinba Baraz, Galimatias</span>
+            <span class="song-tags">
+              <a class="tag">Electronic</a>
+              <a class="tag">Jazz</a>
+              <a class="tag">Energetic</a>
+              <a class="tag">Chill</a>
+              <a class="tag">Calm</a>
+            </span>
+          </div>
+        </div>
+
+        <div class="song">
+          <div class="flex-container">
+            <img src="https://images.complex.com/complex/image/upload/t_article_image/leadflora_yisbdu.jpg" class="album-art" alt="Album Art">
+            <span class="song-title">Drift</span>
+            <span class="song-artist">Alinba Baraz, Galimatias</span>
+            <span class="song-tags">
+              <a class="tag">Electronic</a>
+              <a class="tag">Jazz</a>
+              <a class="tag">Energetic</a>
+              <a class="tag">Chill</a>
+              <a class="tag">Calm</a>
+            </span>
+          </div>
+        </div>
+
+        <div class="song">
+          <div class="flex-container">
+            <img src="https://images.complex.com/complex/image/upload/t_article_image/leadflora_yisbdu.jpg" class="album-art" alt="Album Art">
+            <span class="song-title">Drift</span>
+            <span class="song-artist">Alinba Baraz, Galimatias</span>
+            <span class="song-tags">
+              <a class="tag">Electronic</a>
+              <a class="tag">Jazz</a>
+              <a class="tag">Energetic</a>
+              <a class="tag">Chill</a>
+              <a class="tag">Calm</a>
+            </span>
+          </div>
+        </div>
+        <div class="song">
+          <div class="flex-container">
+            <img src="https://images.complex.com/complex/image/upload/t_article_image/leadflora_yisbdu.jpg" class="album-art" alt="Album Art">
+            <span class="song-title">Drift</span>
+            <span class="song-artist">Alinba Baraz, Galimatias</span>
+            <span class="song-tags">
+              <a class="tag">Electronic</a>
+              <a class="tag">Jazz</a>
+              <a class="tag">Energetic</a>
+              <a class="tag">Chill</a>
+              <a class="tag">Calm</a>
+            </span>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="label">Recently Added</div>
+    <div class="h-scrolling-container">
+      <div class="h-scrolling-container-inner">
+
+        <div class="song">
+          <div class="flex-container">
+            <img src="https://images.complex.com/complex/image/upload/t_article_image/leadflora_yisbdu.jpg" class="album-art" alt="Album Art">
+            <span class="song-title">Drift</span>
+            <span class="song-artist">Alinba Baraz, Galimatias</span>
+            <span class="song-tags">
+              <a class="tag">Electronic</a>
+              <a class="tag">Jazz</a>
+              <a class="tag">Energetic</a>
+              <a class="tag">Chill</a>
+              <a class="tag">Calm</a>
+            </span>
+          </div>
+        </div>
+
+        <div class="song">
+          <div class="flex-container">
+            <img src="https://images.complex.com/complex/image/upload/t_article_image/leadflora_yisbdu.jpg" class="album-art" alt="Album Art">
+            <span class="song-title">Drift</span>
+            <span class="song-artist">Alinba Baraz, Galimatias</span>
+            <span class="song-tags">
+              <a class="tag">Electronic</a>
+              <a class="tag">Jazz</a>
+              <a class="tag">Energetic</a>
+              <a class="tag">Chill</a>
+              <a class="tag">Calm</a>
+            </span>
+          </div>
+        </div>
+
+        <div class="song">
+          <div class="flex-container">
+            <img src="https://images.complex.com/complex/image/upload/t_article_image/leadflora_yisbdu.jpg" class="album-art" alt="Album Art">
+            <span class="song-title">Drift</span>
+            <span class="song-artist">Alinba Baraz, Galimatias</span>
+            <span class="song-tags">
+              <a class="tag">Electronic</a>
+              <a class="tag">Jazz</a>
+              <a class="tag">Energetic</a>
+              <a class="tag">Chill</a>
               <a class="tag">Calm</a>
             </span>
           </div>
