Bug fixes and minor tweaks
"find music" button now shows proper css. Sidenav is now scrollable on mobile devices.

--- a/source/index.html
+++ b/source/index.html
@@ -13,6 +13,10 @@ require_once 'dbConnect.php';
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <title>Discovery New Music</title>
+  <!-- Meta tag stating site is optimized for mobile -->
+  <meta name="viewport" content="width=device-width; initial-scale=1.0;">
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -20,12 +24,6 @@ require_once 'dbConnect.php';
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,700|Raleway&display=swap" rel="stylesheet">
   <!-- Import main stylesheet -->
   <link rel="stylesheet" href="stylesheets/main.css">
-
-  <meta charset="utf-8">
-  <!-- Meta tag stating site is optimized for mobile -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Find New Music - Bcom Music</title>
 
 </head>
 
@@ -61,7 +59,8 @@ require_once 'dbConnect.php';
         <a href="#!">No Vocals</a>
         <a href="#!">Random</a>
       </div>
-      <input type="submit" class="button-large" value="Find Music">
+      <span><a href="#!" class="button-large">Find Music</a></span>
+      <!--<input type="submit" class="button-large" value="Find Music">-->
     </form>
   </div>
 
